--- a/Path-finder/src/main/resources/templates/fragments/footer.html
+++ b/Path-finder/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,5 @@
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <footer th:fragment="footer" class="footer bg-blur rounded">
 	<div class="container-fluid text-center">
 		<div class="h5 text-white">&copy; Lucho, Chocho & Spring
