--- a/Path-finder/src/main/resources/templates/fragments/navigation.html
+++ b/Path-finder/src/main/resources/templates/fragments/navigation.html
@@ -1,3 +1,5 @@
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <header th:fragment="navigation">
 	<nav class="main-nav">
 		<ul th:if="${@loggedUser.id == null}">
@@ -7,9 +9,10 @@
 			<li><a th:href="@{/about}">About</a></li>
 		</ul>
 		<ul th:unless="${@loggedUser.id == null}">
-			<li><a th:href="@{/}">Add new route</a></li>
-			<li><a th:href="@{/}">Profile</a></li>
+			<li><a th:href="@{/routes/add}">Add new route</a></li>
+			<li><a th:href="@{/users/profile}">Profile</a></li>
 			<li th:if="${@loggedUser.isAdmin()}"><a href="/">Admin</a></li>
+			<li th:unless="${@loggedUser.isAdmin()}"></li>
 			<li><a th:href="@{/auth/logout}">Logout</a></li>
 		</ul>
 	</nav>
