--- a/Path-finder/src/main/resources/templates/login.html
+++ b/Path-finder/src/main/resources/templates/login.html
@@ -1,55 +1,53 @@
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/fragments/head}"> </head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{/fragments/head}">
+</head>
 <body>
-<main class="p-5 align-content-center bg-blur my-register-div">
-    <h1 class="    border-bottom mb-5">Login</h1>
-    <div class="d-flex justify-content-center">
+	<main class="p-5 align-content-center bg-blur my-register-div">
+		<h1 class="    border-bottom mb-5">Login</h1>
+		<div class="d-flex justify-content-center">
 
-        <div class="row g-3 align-items-center">
+			<div class="row g-3 align-items-center">
 
-            <form
-                    th:action="@{/auth/login}"
-                    th:method="POST">
-                <div>
-                    <div class="col-auto">
-                        <label for="inputUsername" class="col-form-label ">Username</label>
-                    </div>
-                    <div class="col-auto">
-                        <input type="text"
-                               name="username"
-                               required minlength="4" maxlength="20"
-                               id="inputUsername"
-                               class="form-control"
-                               aria-describedby="usernameHelpInline">
-                    </div>
-                </div>
-                <div>
-                    <div class="col-auto">
-                        <label for="inputPassword" class="col-form-label ">Password</label>
-                    </div>
-                    <div class="col-auto">
-                        <input type="password"
-                               name="password"
-                               required minlength="4" maxlength="20"
-                               id="inputPassword" class="form-control"
-                               aria-describedby="passwordHelpInline">
-                    </div>
-                </div>
-                <div class="d-flex justify-content-center mt-2">
-                    <button class="btn btn-primary btn-block w-50" type="submit">Login</button>
-                </div>
-            </form>
-        </div>
+				<form th:action="@{/auth/login}" th:method="POST"
+					th:object="${userLoginForm}">
 
-    </div>
-</main>
-<footer class="footer bg-blur rounded">
-    <div class="container-fluid text-center">
-        <div class="h5 text-white">
-            &copy; Lucho, Chocho & Spring Advanced Students 2021. All rights reserved.
-        </div>
-    </div>
-</footer>
+					<p th:if="${#fields.hasAnyErrors()}"
+						class="alert-info h3 m-auto p-1">Username Or Password is
+						invalid.</p>
+
+					<div>
+						<div class="col-auto">
+							<label for="inputUsername" class="col-form-label ">Username</label>
+						</div>
+						<div class="col-auto">
+							<input type="text" th:value="*{username}" name="username"
+								required minlength="4" maxlength="20" id="inputUsername"
+								class="form-control" aria-describedby="usernameHelpInline">
+						</div>
+					</div>
+					<div>
+						<div class="col-auto">
+							<label for="inputPassword" class="col-form-label ">Password</label>
+						</div>
+						<div class="col-auto">
+							<input type="password" name="password" required minlength="4"
+								maxlength="20" id="inputPassword" class="form-control"
+								aria-describedby="passwordHelpInline">
+						</div>
+					</div>
+					<div class="d-flex justify-content-center mt-2">
+						<button class="btn btn-primary btn-block w-50" type="submit">Login</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</main>
+	<footer class="footer bg-blur rounded">
+		<div class="container-fluid text-center">
+			<div class="h5 text-white">&copy; Lucho, Chocho & Spring
+				Advanced Students 2021. All rights reserved.</div>
+		</div>
+	</footer>
 </body>
 </html>
