--- a/Path-finder/src/main/resources/templates/register.html
+++ b/Path-finder/src/main/resources/templates/register.html
@@ -8,26 +8,21 @@
 		<div class="d-flex justify-content-center ">
 			<div class="row g-3">
 				<form th:action="@{/auth/register}" th:method="POST"
-					th:object="${userRegisterInfo}">
+					th:object="${userRegisterForm}">
 					<div>
 						<div class="col-auto">
 							<label for="inputUsername" class="col-form-label ">Username</label>
 						</div>
 						<div class="col-auto">
-							<input th:field="*{username}" 
-								required minlength="5" maxlength="20"
-								type="text" 
-								id="inputUsername" 
-								class="form-control"
-								aria-describedby="usernameHelpInline"> <small
-								id="usernameError" 
+							<input name="username" required minlength="5" maxlength="20"
+								th:value="*{username}" type="text" id="inputUsername"
+								class="form-control" aria-describedby="usernameHelpInline">
+							<small id="usernameError"
 								class="invalid-feedback bg-danger rounded">Username
 								length must be more than 3 characters</small> <small
-								id="usernameUniqueError" th:if="${#fields.hasErrors('username')}" class=" bg-danger rounded">Username
-								is already occupied</small>
-
-
-
+								id="usernameUniqueError"
+								th:if="${#fields.hasErrors('username')}"
+								class=" bg-danger rounded">Username is already occupied</small>
 						</div>
 					</div>
 
@@ -38,9 +33,10 @@
 						</div>
 						<div class="col-auto">
 							<input name="fullName" required minlength="5" maxlength="20"
-								type="text" id="inputFullName" class="form-control"
-								aria-describedby="fullNameHelpInline"> <small
-								id="fullNameError"
+								type="text" id="inputFullName" th:value="*{fullName}"
+								class="form-control" aria-describedby="fullNameHelpInline">
+							<small id="fullNameError"
+								th:if="${#fields.hasErrors('fullName')}"
 								class="invalid-feedback  form-text bg-danger rounded">Full
 								name length must be more than 3 characters</small>
 						</div>
@@ -51,9 +47,10 @@
 							<label for="inputEmail" class="col-form-label ">Email</label>
 						</div>
 						<div class="col-auto">
-							<input name="email" required type="email" id="inputEmail"
-								class="form-control" aria-describedby="emailHelpInline">
-							<small id="emailError"
+							<input name="email" required type="email" th:value="*{email}"
+								id="inputEmail" class="form-control"
+								aria-describedby="emailHelpInline"> <small
+								id="emailError" th:if="${#fields.hasErrors('email')}"
 								class="invalid-feedback  form-text bg-danger rounded">Must
 								be valid email</small>
 						</div>
@@ -63,9 +60,10 @@
 							<label for="inputAge" class="col-form-label ">Age</label>
 						</div>
 						<div class="col-auto">
-							<input name="age" required type="number" id="inputAge"
-								class="form-control" min="0" max="90"
+							<input name="age" required type="number" th:value="*{age}"
+								id="inputAge" class="form-control" min="0" max="90"
 								aria-describedby="ageHelpInline"> <small id="ageError"
+								th:if="${#fields.hasErrors('age')}"
 								class="invalid-feedback  form-text bg-danger rounded">Must
 								be valid age</small>
 						</div>
@@ -76,9 +74,10 @@
 						</div>
 						<div class="col-auto">
 							<input name="password" required minlength="5" maxlength="20"
-								type="password" id="inputPassword" class="form-control"
-								aria-describedby="passwordHelpInline"> <small
-								id="passwordError"
+								th:value="*{password}" type="password" id="inputPassword"
+								class="form-control" aria-describedby="passwordHelpInline">
+							<small id="passwordError"
+								th:if="${#fields.hasErrors('password')}"
 								class="invalid-feedback  form-text bg-danger rounded">
 								Password length must be between 5 and 20 characters and
 								passwords should match. </small>
@@ -92,10 +91,11 @@
 						</div>
 						<div class="col-auto">
 							<input name="confirmPassword" required minlength="5"
-								maxlength="20" type="password" id="inputConfirmPassword"
-								class="form-control"
+								maxlength="20" th:value="*{confirmPassword}" type="password"
+								id="inputConfirmPassword" class="form-control"
 								aria-describedby="confirmPasswordHelpInline"> <small
 								id="confirmPasswordError"
+								th:if="${#fields.hasErrors('confirmPassword')}"
 								class="invalid-feedback  form-text bg-danger rounded">
 								Password length must be between 5 and 20 characters and
 								passwords should match. </small>
